--- a/internal/views/home.html
+++ b/internal/views/home.html
@@ -75,7 +75,7 @@
         {{if .Images}}
           <img src="{{(index .Images 0).URL}}" alt="{{(index .Images 0).Alt}}" loading="lazy" />
         {{else}}<div class="placeholder">IMG</div>{{end}}
-        <div class="badges">{{if .ReadyToShip}}<span class="badge green">En stock</span>{{end}}</div>
+        <!-- Badge "En stock" removido -->
       </div>
       <div class="card-body">
         <h3 class="card-title"><a href="/product/{{.Slug}}">{{.Name}}</a></h3>
